--- a/src/index.css
+++ b/src/index.css
@@ -22,14 +22,16 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: 280px;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 #root {
   width: 100%;
   margin: 0 auto;
   text-align: center;
+  max-width: 100vw;
 }
 
 /* Custom scrollbar for webkit browsers */
